--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -1,4 +1,122 @@
-.box{
+a {
+    text-decoration: none;
+    text-decoration-skip-ink: none;
+    color: red;
+    cursor: pointer;
+    -webkit-transition: opacity .2s ease-out 0s, color .2s ease-out 0s;
+    -moz-transition: opacity .2s ease-out 0s, color .2s ease-out 0s;
+    -o-transition: opacity .2s ease-out 0s, color .2s ease-out 0s;
+    transition: opacity .2s ease-out 0s, color .2s ease-out 0s;
+
+    &:hover {
+        color: orange;
+        text-decoration: underline;
+    }
+
+    &:active {
+        opacity: 0.7;
+    }
+}
+
+.box {
     width: 100px;
     height: 100px;
+}
+
+.block {
+    width: 100px;
+    height: 100px;
+    background: yellow;
+    margin: 0 auto 20px;
+}
+
+.box1 {
+    width: 50px;
+    height: 50px;
+    border: 1px solid black;
+    background-color: red;
+    margin: 0 auto;
+    position: relative;
+
+    &:after {
+        content: "";
+        position: absolute;
+        top: 0;
+        bottom: 0;
+        left: 0;
+        right: 0;
+        box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.9);
+    }
+}
+
+.btn-container {
+    display: block;
+    margin: 0 auto 200px;
+    max-width: 340px;
+}
+
+.btn_width,
+.btn_height {
+    display: inline-block;
+    cursor: pointer;
+    overflow: hidden;
+    text-align: center;
+    text-decoration: none;
+    color: green;
+    font-size: 2em;
+    max-width: 100%;
+    height: 100%;
+    padding: 10px 20px;
+    border: none;
+    border-radius: 18px;
+    outline: none;
+    background: black;
+    margin-left: 30px;
+    -webkit-transition: opacity .2s ease-out 0s;
+    -moz-transition: opacity .2s ease-out 0s;
+    -o-transition: opacity .2s ease-out 0s;
+    transition: opacity .2s ease-out 0s;
+
+    &:hover {
+        opacity: 0.7;
+    }
+
+    &:active {
+        opacity: 0.9;
+    }
+}
+
+.tab {
+    display: none;
+
+    &.active {
+        display: block;
+    }
+}
+.tab-container {
+    padding-top: 50px;
+    width: 100px;
+    margin: 0 auto;
+    text-align: center;
+}
+.tab-wrap {
+    li {
+        margin-bottom: 10px;
+        a {
+            padding: 4px 10px;
+            -webkit-transition: background-color .2s ease-out 0s;
+            -moz-transition: background-color .2s ease-out 0s;
+            -o-transition: background-color .2s ease-out 0s;
+            transition: background-color .2s ease-out 0s;
+                        
+            &.active {
+                background-color: green;
+            }
+        }
+    }
+}
+
+.tab-content{
+    width: 300px;
+    margin: 0 auto;
 }
