--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -49,6 +49,71 @@ a {
     }
 }
 
+.red {
+    display: block;
+    color:green;
+    height: 200px;
+    width:200px;
+    text-decoration: underline;
+    text-align: center;
+    margin: 0 auto;
+    border: 3px solid blue;
+}
+
+.boxline-container {
+    margin: 0 auto;
+    display: block;
+    width: 401px;
+    &_width200{
+        width: 200px;
+    }
+}
+
+.box-inline {
+    text-align: center;
+    display: inline-block;
+    vertical-align: top;
+    width: 75px;
+    height: 35px;
+    border: 1px solid black;
+    padding: 25px 0 15px;
+
+    &.red {
+        background-color: red;
+    }
+    &.blue {
+        background-color: blue;
+    }
+    &.green {
+        background-color: green;
+    }
+    &.yellow {
+        background-color: yellow;
+    }
+    &.grey {
+        background-color: grey;
+    }
+}
+
+.boxblack{
+    width: 200px;
+    height: 200px;
+    background-color: black;
+}
+
+.boxmover{
+    width: 50px;
+    height: 50px;
+    background-color: goldenrod;
+    position: absolute;
+    top: 100px;
+    left: 100px;
+    -webkit-transition: all .5s ease 0s;
+    -moz-transition: all .5s ease 0s;
+    -o-transition: all .5s ease 0s;
+    transition: all .5s ease 0s;
+}
+
 .btn-container {
     display: block;
     margin: 0 auto 200px;
@@ -119,4 +184,26 @@ a {
 .tab-content{
     width: 300px;
     margin: 0 auto;
+}
+
+.tablebox{
+    padding-top: 50px;
+    overflow: auto;
+    margin-bottom: 10px;
+    margin-left: 50px;
+    width: 100%;
+}
+
+table{
+    // border-collapse: collapse;
+    // border-spacing: 0;
+    max-width: 100%;
+    margin-bottom: 20px;
+    border: 1px solid #e8e8e8;
+    td {
+        border: 2px solid black;
+        padding: 50px;
+        width: 0;
+        height: 0;
+    }
 }
