--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -118,6 +118,9 @@ a {
     display: block;
     margin: 0 auto 200px;
     max-width: 340px;
+    &_paddingtop30{
+        padding-top: 30px;
+    }
 }
 
 .btn_width,
@@ -205,5 +208,18 @@ table{
         padding: 50px;
         width: 0;
         height: 0;
+    }
+}
+
+.popup {
+    opacity: 0;
+    position: absolute;
+    padding: 10px;
+    border: 1px solid black;
+    background: red;
+    box-shadow: 0 0 10px black;
+    transform: opacity .5s ease-out 0s;
+    &.active {
+        opacity: 1;
     }
 }
